document prepared image endpoints
